[tool.poetry]
name = "privy-python-sdk"
version = "1.0.1"
description = "Python SDK for Privy Digital Signature"
authors = ["LandX Engineering <tech@landx.id>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests = "^2.28.1"
Flask = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "privy_python_sdk"